--- a/Employee.Web/Views/Employees/Edit.cshtml
+++ b/Employee.Web/Views/Employees/Edit.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Edit</h2>
 
-<h4>EmployeeEntity</h4>
+<h4>Employee</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -44,15 +44,13 @@
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-primary" />
+                <a asp-action="Index" class="btn btn-success" >Back to List</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
